fixed css issues on safari

--- a/public/collagenassets/css/style.css
+++ b/public/collagenassets/css/style.css
@@ -1003,7 +1003,7 @@ ul.services li h5 {
 .packages_box .package {
     max-width: 32%;
     width: 100%;
-    display: flex;
+    display: inline-block;
     flex-direction: column;
     align-items: center;
     box-shadow: -1px 0px 20px 0px rgba(246, 72, 153, 0.1);
